--- a/tracks.yaml
+++ b/tracks.yaml
@@ -16,7 +16,7 @@ tracks:
     name: upstream
     patches: null
     release_inc: -1
-    release_repo_url: null
+    release_repo_url: git@github.com:nuclearsandwich/ament_cmake-release
     release_tag: master
     ros_distro: r2b2
     vcs_type: git
