--- a/tracks.yaml
+++ b/tracks.yaml
@@ -21,5 +21,5 @@ tracks:
     release_tag: master
     ros_distro: r2b2
     vcs_type: git
-    vcs_uri: https://github.com/ament/ament_cmake.git
+    vcs_uri: https://github.com/nuclearsandwich/ament_cmake.git
     version: 0.0.0
