--- a/tracks.yaml
+++ b/tracks.yaml
@@ -44,5 +44,5 @@ tracks:
     release_tag: master
     ros_distro: r2b3
     vcs_type: git
-    vcs_uri: null
+    vcs_uri: https://github.com/ament/ament_cmake.git
     version: :{auto}
