--- a/tracks.yaml
+++ b/tracks.yaml
@@ -40,7 +40,7 @@ tracks:
     last_version: 0.0.3
     name: upstream
     patches: null
-    release_inc: -1
+    release_inc: '0'
     release_repo_url: null
     release_tag: master
     ros_distro: r2b3
