--- a/tracks.yaml
+++ b/tracks.yaml
@@ -18,7 +18,7 @@ tracks:
     patches: null
     release_inc: '5'
     release_repo_url: null
-    release_tag: master
+    release_tag: 0.4.0
     ros_distro: ardent
     vcs_type: git
     vcs_uri: https://github.com/ament/ament_cmake.git
