--- a/ament_cmake_core/package.xml
+++ b/ament_cmake_core/package.xml
@@ -2,7 +2,7 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>ament_cmake_core</name>
-  <version>0.4.0</version>
+  <version>0.5.0</version>
   <description>
     The core of the ament buildsystem in CMake.
 
@@ -18,9 +18,11 @@
 
   <buildtool_depend>cmake</buildtool_depend>
   <buildtool_depend>ament_package</buildtool_depend>
+  <buildtool_depend>python3-catkin-pkg-modules</buildtool_depend>
 
   <buildtool_export_depend>cmake</buildtool_export_depend>
   <buildtool_export_depend>ament_package</buildtool_export_depend>
+  <buildtool_export_depend>python3-catkin-pkg-modules</buildtool_export_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
