--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0313de93
-	trimbase = 
+	trim = ament_cmake_core
+	base = 97ac37c1
+	trimbase = 0313de93
 	parent = upstream
 	previous = 99028b6a
