--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 97ac37c1
+	base = f54f5c8b
 	trimbase = 
 	parent = release/eloquent/ament_cmake_core
-	previous = 
+	previous = 97ac37c1
