--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a905c79
+	base = 8693f5f6
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_core
-	previous = 
+	previous = 5a905c79
