--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = fffa6d82
-	trimbase = 
+	base = 71039a22
+	trimbase = fffa6d82
 	parent = upstream
 	previous = 99028b6a
