--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = b248956b
-	trimbase = 
+	base = 038c35d2
+	trimbase = b248956b
 	parent = upstream
 	previous = 99028b6a
