--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = 75ea8c1a
-	trimbase = 
+	base = 11b4e45b
+	trimbase = 75ea8c1a
 	parent = upstream
 	previous = 99028b6a
