--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = af41119f
-	trimbase = 
+	trim = ament_cmake_export_dependencies
+	base = fa76b28e
+	trimbase = af41119f
 	parent = upstream
 	previous = 99028b6a
