--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7b13b438
-	trimbase = 
+	trim = ament_cmake_gtest
+	base = 5ba2fc66
+	trimbase = 7b13b438
 	parent = upstream
 	previous = 99028b6a
