--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 82266333
-	trimbase = 
+	trim = ament_cmake_target_dependencies
+	base = fec783fc
+	trimbase = 82266333
 	parent = upstream
 	previous = 99028b6a
