--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6ce2acaa
-	trimbase = 
+	trim = ament_cmake_test
+	base = 498eb3c9
+	trimbase = 6ce2acaa
 	parent = upstream
 	previous = 99028b6a
