--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 88ae0292
-	trimbase = 
+	trim = ament_cmake_auto
+	base = 89f2c158
+	trimbase = 88ae0292
 	parent = upstream
 	previous = 99028b6a
