--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 94be92a0
-	trimbase = 
+	trim = ament_cmake_gmock
+	base = cc866cb6
+	trimbase = 94be92a0
 	parent = upstream
 	previous = 99028b6a
