--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0ca78cae
-	trimbase = 
+	trim = ament_cmake_export_definitions
+	base = 510d1436
+	trimbase = 0ca78cae
 	parent = upstream
 	previous = 99028b6a
