--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 201b02be
-	trimbase = 
+	trim = ament_cmake_export_link_flags
+	base = 92201860
+	trimbase = 201b02be
 	parent = upstream
 	previous = 99028b6a
