--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ac4652af
-	trimbase = 
+	trim = ament_cmake
+	base = 90eca82f
+	trimbase = ac4652af
 	parent = upstream
 	previous = 99028b6a
