--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4992c48c
-	trimbase = 
+	trim = ament_cmake_pytest
+	base = 58be3b7c
+	trimbase = 4992c48c
 	parent = upstream
 	previous = 99028b6a
