--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0708fcbe
-	trimbase = 
+	trim = ament_cmake_libraries
+	base = a7c041a1
+	trimbase = 0708fcbe
 	parent = upstream
 	previous = 99028b6a
