--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = 67b8a1f3
-	trimbase = 
+	base = 13179269
+	trimbase = 67b8a1f3
 	parent = upstream
 	previous = 99028b6a
