--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a1e6c17c
-	trimbase = 
+	trim = ament_cmake_export_include_directories
+	base = d175cb73
+	trimbase = a1e6c17c
 	parent = upstream
 	previous = 99028b6a
