--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 744062fc
-	trimbase = 
+	trim = ament_cmake_nose
+	base = 702a8daa
+	trimbase = 744062fc
 	parent = upstream
 	previous = 99028b6a
