--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fec783fc
+	base = 6b0da622
 	trimbase = 
 	parent = release/eloquent/ament_cmake_target_dependencies
-	previous = 
+	previous = fec783fc
