--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8cdc013
+	base = ea058ec0
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_target_dependencies
-	previous = 
+	previous = f8cdc013
