--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92201860
+	base = 30855564
 	trimbase = 
 	parent = release/eloquent/ament_cmake_export_link_flags
-	previous = 
+	previous = 92201860
