--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e28dce24
+	base = 0102b9c7
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_export_link_flags
-	previous = 
+	previous = e28dce24
