--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 702a8daa
+	base = fed15d1c
 	trimbase = 
 	parent = release/eloquent/ament_cmake_nose
-	previous = 
+	previous = 702a8daa
