--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bada7817
+	base = a69c5a5f
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_nose
-	previous = 
+	previous = bada7817
