--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 90eca82f
+	base = c1b471b7
 	trimbase = 
 	parent = release/eloquent/ament_cmake
-	previous = 
+	previous = 90eca82f
