--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8e50be7c
+	base = e4378b14
 	trimbase = 
 	parent = debian/eloquent/ament_cmake
-	previous = 
+	previous = 8e50be7c
