--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7373aa73
+	base = e0229130
 	trimbase = 
 	parent = release/eloquent/ament_cmake_include_directories
-	previous = 
+	previous = 7373aa73
