--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc201675
+	base = b93ee4c9
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_include_directories
-	previous = 
+	previous = dc201675
