--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d175cb73
+	base = aea642bc
 	trimbase = 
 	parent = release/eloquent/ament_cmake_export_include_directories
-	previous = 
+	previous = d175cb73
