--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa76b28e
+	base = edff2cb4
 	trimbase = 
 	parent = release/eloquent/ament_cmake_export_dependencies
-	previous = 
+	previous = fa76b28e
