--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3029821f
+	base = 80e069cd
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_export_dependencies
-	previous = 
+	previous = 3029821f
