--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5ba2fc66
+	base = 68e6c898
 	trimbase = 
 	parent = release/eloquent/ament_cmake_gtest
-	previous = 
+	previous = 5ba2fc66
