--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5b4c9b30
+	base = aa03e391
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_gtest
-	previous = 
+	previous = 5b4c9b30
