--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58be3b7c
+	base = b88d387c
 	trimbase = 
 	parent = release/eloquent/ament_cmake_pytest
-	previous = 
+	previous = 58be3b7c
