--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c98438ee
+	base = 02d92315
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_pytest
-	previous = 
+	previous = c98438ee
