--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9cbde4b3
+	base = ee1ab242
 	trimbase = 
 	parent = release/eloquent/ament_cmake_export_interfaces
-	previous = 
+	previous = 9cbde4b3
