--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eed66448
+	base = 8b53df51
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_export_interfaces
-	previous = 
+	previous = eed66448
