--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58b31507
+	base = dd3bb031
 	trimbase = 
 	parent = release/eloquent/ament_cmake_python
-	previous = 
+	previous = 58b31507
