--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec72c8ea
+	base = 95de532a
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_python
-	previous = 
+	previous = ec72c8ea
