--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89f2c158
+	base = 1a856ae6
 	trimbase = 
 	parent = release/eloquent/ament_cmake_auto
-	previous = 
+	previous = 89f2c158
