--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cecaf64e
+	base = 7bcc488e
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_auto
-	previous = 
+	previous = cecaf64e
