--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 498eb3c9
+	base = 3a031328
 	trimbase = 
 	parent = release/eloquent/ament_cmake_test
-	previous = 
+	previous = 498eb3c9
