--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 51b40a6b
+	base = ac92a84d
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_test
-	previous = 
+	previous = 51b40a6b
