--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7c041a1
+	base = 57e81963
 	trimbase = 
 	parent = release/eloquent/ament_cmake_libraries
-	previous = 
+	previous = a7c041a1
