--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 77a8967c
+	base = 9a5b6c58
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_libraries
-	previous = 
+	previous = 77a8967c
