--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 374c9e0b
+	base = b8547139
 	trimbase = 
 	parent = release/eloquent/ament_cmake_export_libraries
-	previous = 
+	previous = 374c9e0b
