--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 747c2d17
+	base = 04bd5735
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_export_libraries
-	previous = 
+	previous = 747c2d17
