--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4897e038
+	base = 531d3048
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_export_definitions
-	previous = 
+	previous = 4897e038
