--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cc866cb6
+	base = 71e023be
 	trimbase = 
 	parent = release/eloquent/ament_cmake_gmock
-	previous = 
+	previous = cc866cb6
