--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d20eddef
+	base = 197f7810
 	trimbase = 
 	parent = debian/eloquent/ament_cmake_gmock
-	previous = 
+	previous = d20eddef
