--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_interfaces
 	base = 9cbde4b3
-	trimbase = 6ad97a8c
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
