--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_interfaces
-	base = 04b57f49
-	trimbase = 
+	base = 40d0c8a7
+	trimbase = 04b57f49
 	parent = upstream
 	previous = 9d75b299
