--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gtest
 	base = 5ba2fc66
-	trimbase = 7b13b438
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
