--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_include_directories
-	base = d4b7052d
-	trimbase = 
+	base = c9a40136
+	trimbase = d4b7052d
 	parent = upstream
 	previous = 9d75b299
