--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_include_directories
 	base = 7373aa73
-	trimbase = f4598c9c
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
