--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_test
-	base = 3cccf03e
-	trimbase = 
+	base = b52bd543
+	trimbase = 3cccf03e
 	parent = upstream
 	previous = 9d75b299
