--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_auto
-	base = da8b435e
-	trimbase = 
+	base = f1c02609
+	trimbase = da8b435e
 	parent = upstream
 	previous = 9d75b299
