--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_libraries
 	base = 374c9e0b
-	trimbase = 010d772f
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
