--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gmock
 	base = cc866cb6
-	trimbase = 94be92a0
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
