--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_link_flags
 	base = 92201860
-	trimbase = 201b02be
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
