--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
 	base = 58b31507
-	trimbase = 26a54164
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
