--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
-	base = 37bc468d
-	trimbase = 
+	base = 60693021
+	trimbase = 37bc468d
 	parent = upstream
 	previous = 9d75b299
