--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake
-	base = 1bd80276
-	trimbase = 
+	base = fa8d8f30
+	trimbase = 1bd80276
 	parent = upstream
 	previous = 9d75b299
