--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
 	base = 58be3b7c
-	trimbase = 4992c48c
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
