--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
-	base = 40ee9cce
-	trimbase = 
+	base = 8b3ca45c
+	trimbase = 40ee9cce
 	parent = upstream
 	previous = 9d75b299
