--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_libraries
-	base = b29fe936
-	trimbase = 
+	base = 4f4251ca
+	trimbase = b29fe936
 	parent = upstream
 	previous = 9d75b299
