--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = 4c9fb77b
-	trimbase = 
+	base = 96b0b821
+	trimbase = 4c9fb77b
 	parent = upstream
 	previous = 9d75b299
