--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_include_directories
 	base = d175cb73
-	trimbase = a1e6c17c
+	trimbase = 
 	parent = upstream
 	previous = 99028b6a
