--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_nose
-	base = 5936faff
-	trimbase = 
+	base = 096ff701
+	trimbase = 5936faff
 	parent = upstream
 	previous = 9d75b299
