--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 982a2306
-	base = 2b6b32ca
-	trim = 
-	trimbase = 
+	base = 2eba2b32
+	trim = ament_cmake_version
+	trimbase = 2b6b32ca
