--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_test
-	base = 3cedc1bd
-	trimbase = 
+	base = 5e7be9a4
+	trimbase = 3cedc1bd
 	parent = upstream
 	previous = 982a2306
