--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_target_dependencies
 	base = 168cbeac
-	trimbase = 8e82785c
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
