--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_target_dependencies
-	base = 2d691c8e
-	trimbase = 
+	base = e7bf97d3
+	trimbase = 2d691c8e
 	parent = upstream
 	previous = 982a2306
