--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
 	base = 60693021
-	trimbase = 37bc468d
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
