--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
-	base = 393854ab
-	trimbase = 
+	base = a82aeed5
+	trimbase = 393854ab
 	parent = upstream
 	previous = 982a2306
