--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_nose
-	base = 81f7a133
-	trimbase = 
+	base = 5830394e
+	trimbase = 81f7a133
 	parent = upstream
 	previous = 982a2306
