--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_libraries
-	base = d333721f
-	trimbase = 
+	base = 305e980a
+	trimbase = d333721f
 	parent = upstream
 	previous = 982a2306
