--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_include_directories
-	base = 1f8d5751
-	trimbase = 
+	base = 5ee43ea4
+	trimbase = 1f8d5751
 	parent = upstream
 	previous = 982a2306
