--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gtest
 	base = b17bbf64
-	trimbase = 03be8f6a
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
