--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gmock
 	base = e5e72017
-	trimbase = c2a4f1b1
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
