--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_link_flags
 	base = fab2b235
-	trimbase = 80850063
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
