--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_libraries
 	base = fd3fe263
-	trimbase = 2355b1b3
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
