--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_libraries
-	base = 660db181
-	trimbase = 
+	base = 6b5cb80f
+	trimbase = 660db181
 	parent = upstream
 	previous = 982a2306
