--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_interfaces
-	base = 113c6c53
-	trimbase = 
+	base = f067146c
+	trimbase = 113c6c53
 	parent = upstream
 	previous = 982a2306
