--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_include_directories
 	base = 961adcad
-	trimbase = 1a0f557d
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
