--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_dependencies
 	base = eddb0349
-	trimbase = 4b9b2023
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
