--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_dependencies
-	base = d4c59384
-	trimbase = 
+	base = bb8adc8f
+	trimbase = d4c59384
 	parent = upstream
 	previous = 982a2306
