--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_definitions
 	base = a6079c25
-	trimbase = 247aa19d
+	trimbase = 
 	parent = upstream
 	previous = 9d75b299
