--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = ea9dccb4
-	trimbase = 
+	base = bb6e831b
+	trimbase = ea9dccb4
 	parent = upstream
 	previous = 982a2306
