--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake
-	base = e927a817
-	trimbase = 
+	base = e851a543
+	trimbase = e927a817
 	parent = upstream
 	previous = 982a2306
