--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/eloquent/ament_cmake_version
-	previous = 
-	base = 2eba2b32
+	previous = 2eba2b32
+	base = a1271c3a
 	trim = 
 	trimbase = 
