--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/eloquent/ament_cmake_version
-	previous = 
-	base = 882bcbf7
+	previous = 882bcbf7
+	base = 38b8971d
 	trim = 
 	trimbase = 
