--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_interfaces
-	base = 835a6399
-	trimbase = 
+	base = 3b16040a
+	trimbase = 835a6399
 	parent = upstream
 	previous = ff402ffd
