--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_dependencies
-	base = dbad3784
-	trimbase = 
+	base = 8fe18413
+	trimbase = dbad3784
 	parent = upstream
 	previous = ff402ffd
