--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gtest
 	base = 2331f889
-	trimbase = 3d8879a6
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
