--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gtest
-	base = 66afbecf
-	trimbase = 
+	base = 7291e4b8
+	trimbase = 66afbecf
 	parent = upstream
 	previous = ff402ffd
