--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_include_directories
-	base = 4834ffe2
-	trimbase = 
+	base = ec1193a4
+	trimbase = 4834ffe2
 	parent = upstream
 	previous = ff402ffd
