--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_target_dependencies
 	base = e7bf97d3
-	trimbase = 2d691c8e
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
