--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_target_dependencies
-	base = 868c2440
-	trimbase = 
+	base = 8c165350
+	trimbase = 868c2440
 	parent = upstream
 	previous = ff402ffd
