--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_test
-	base = 57333b69
-	trimbase = 
+	base = 1743e117
+	trimbase = 57333b69
 	parent = upstream
 	previous = ff402ffd
