--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_auto
-	base = 2dc1e0be
-	trimbase = 
+	base = 7411ff5b
+	trimbase = 2dc1e0be
 	parent = upstream
 	previous = ff402ffd
