--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gmock
 	base = 7f8f61f2
-	trimbase = a9d88464
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
