--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gmock
-	base = 86a0d248
-	trimbase = 
+	base = ede0ccf2
+	trimbase = 86a0d248
 	parent = upstream
 	previous = ff402ffd
