--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_definitions
 	base = a581ed09
-	trimbase = aba39ffa
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
