--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_definitions
-	base = ba5ee9e3
-	trimbase = 
+	base = 1fb2d702
+	trimbase = ba5ee9e3
 	parent = upstream
 	previous = ff402ffd
