--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_link_flags
 	base = 2168b0ca
-	trimbase = f1a6aecd
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
