--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_link_flags
-	base = aa814417
-	trimbase = 
+	base = ebadb525
+	trimbase = aa814417
 	parent = upstream
 	previous = ff402ffd
