--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
 	base = 798bdec1
-	trimbase = 18f23ce5
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
