--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
-	base = 80f18b0c
-	trimbase = 
+	base = 224a2007
+	trimbase = 80f18b0c
 	parent = upstream
 	previous = ff402ffd
