--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
 	base = a82aeed5
-	trimbase = 393854ab
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
