--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
-	base = fcda5d20
-	trimbase = 
+	base = a37eea87
+	trimbase = fcda5d20
 	parent = upstream
 	previous = ff402ffd
