--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_libraries
-	base = e3087ec7
-	trimbase = 
+	base = d7153619
+	trimbase = e3087ec7
 	parent = upstream
 	previous = ff402ffd
