--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = 9f26ca93
-	trimbase = 
+	base = e6b00d64
+	trimbase = 9f26ca93
 	parent = upstream
 	previous = ff402ffd
