--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_include_directories
 	base = d382775c
-	trimbase = c98d08f3
+	trimbase = 
 	parent = upstream
 	previous = 982a2306
