--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_include_directories
-	base = 354093c7
-	trimbase = 
+	base = 5cc18aee
+	trimbase = 354093c7
 	parent = upstream
 	previous = ff402ffd
