--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_nose
-	base = ba7c3ef9
-	trimbase = 
+	base = 549c4d42
+	trimbase = ba7c3ef9
 	parent = upstream
 	previous = ff402ffd
