--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ff402ffd
-	base = 22d6bb52
+	base = 0a311764
 	trim = ament_cmake_version
-	trimbase = 
+	trimbase = 22d6bb52
