--- a/ament_cmake_test/package.xml
+++ b/ament_cmake_test/package.xml
@@ -2,12 +2,13 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>ament_cmake_test</name>
-  <version>0.7.4</version>
+  <version>0.8.1</version>
   <description>The ability to add tests in the ament buildsystem in CMake.</description>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake_core</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
   <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>
 
