--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gtest
-	base = bced2bd1
-	trimbase = 
+	base = d504f56f
+	trimbase = bced2bd1
 	parent = upstream
 	previous = fdc0d941
