--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_test
-	base = a8a2615a
-	trimbase = 
+	base = 31ee6b88
+	trimbase = a8a2615a
 	parent = upstream
 	previous = fdc0d941
