--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_nose
-	base = c9418030
-	trimbase = 
+	base = 7883ece7
+	trimbase = c9418030
 	parent = upstream
 	previous = fdc0d941
