--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_include_directories
-	base = 776d3165
-	trimbase = 
+	base = 2dec617c
+	trimbase = 776d3165
 	parent = upstream
 	previous = fdc0d941
