--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_target_dependencies
-	base = d1849c47
-	trimbase = 
+	base = 3815f491
+	trimbase = d1849c47
 	parent = upstream
 	previous = fdc0d941
