--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_python
-	base = 36cf6c90
-	trimbase = 
+	base = 72f72d22
+	trimbase = 36cf6c90
 	parent = upstream
 	previous = fdc0d941
