--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdc0d941
-	base = 43509fa2
+	base = 87c6654e
 	trim = ament_cmake_version
-	trimbase = 
+	trimbase = 43509fa2
