--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_pytest
-	base = 48a1d20e
-	trimbase = 
+	base = 0328a450
+	trimbase = 48a1d20e
 	parent = upstream
 	previous = fdc0d941
