--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_libraries
-	base = 14f963ec
-	trimbase = 
+	base = d5c3410f
+	trimbase = 14f963ec
 	parent = upstream
 	previous = fdc0d941
