--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_libraries
-	base = a85471dc
-	trimbase = 
+	base = 51a39551
+	trimbase = a85471dc
 	parent = upstream
 	previous = fdc0d941
