--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake
-	base = 23b052cb
-	trimbase = 
+	base = 6c372f76
+	trimbase = 23b052cb
 	parent = upstream
 	previous = fdc0d941
