--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_auto
-	base = 69994321
-	trimbase = 
+	base = 279024f2
+	trimbase = 69994321
 	parent = upstream
 	previous = fdc0d941
