--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_link_flags
-	base = 88827ec4
-	trimbase = 
+	base = b08dc6af
+	trimbase = 88827ec4
 	parent = upstream
 	previous = fdc0d941
