--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_include_directories
-	base = 6e48c52b
-	trimbase = 
+	base = adafab96
+	trimbase = 6e48c52b
 	parent = upstream
 	previous = fdc0d941
