--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_gmock
-	base = ece4368e
-	trimbase = 
+	base = 35ee69ae
+	trimbase = ece4368e
 	parent = upstream
 	previous = fdc0d941
