--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_core
-	base = c8d93dc2
-	trimbase = 
+	base = d9462b7c
+	trimbase = c8d93dc2
 	parent = upstream
 	previous = fdc0d941
