--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_dependencies
-	base = 78e89793
-	trimbase = 
+	base = 09471036
+	trimbase = 78e89793
 	parent = upstream
 	previous = fdc0d941
