--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_definitions
-	base = c1885085
-	trimbase = 
+	base = c4a5a6e8
+	trimbase = c1885085
 	parent = upstream
 	previous = fdc0d941
