--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ament_cmake_export_interfaces
-	base = 0afbc3c9
-	trimbase = 
+	base = 4277813a
+	trimbase = 0afbc3c9
 	parent = upstream
 	previous = fdc0d941
